--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -6,6 +6,7 @@
     margin: 118px 114px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
 }
 .cart-container{
     background-color: rgba(255, 153, 0, 0.3);
